--- a/src/index.scss
+++ b/src/index.scss
@@ -19,34 +19,15 @@
   border: 1px solid #000000;
   border-radius: 8px;
   &_btn {
-    position: relative;
     margin: auto auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 25px;
     height: 25px;
+    padding: 0;
     border: none;
-    &__firstLine {
-      left: 0;
-    }
-    &__secondLine {
-      top: -2px;
-      left: 8px;
-      transform: rotate(-60deg);
-    }
-    &__thirdLine {
-      bottom: -3px;
-      left: 8px;
-      transform: rotate(60deg);
-    }
-    .line {
-      position: absolute;
-      width: 3px;
-      height: 20px;
-      border-radius: 8px;
-      background-color: #000000;
-    }
-  }
-  &_modal {
-    &__video {
+    &__icon {
       width: 100%;
       height: 100%;
     }
