--- a/src/index.scss
+++ b/src/index.scss
@@ -18,18 +18,20 @@
   height: 150px;
   border: 1px solid #000000;
   border-radius: 8px;
-  &_btn {
-    margin: auto auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 25px;
-    height: 25px;
-    padding: 0;
-    border: none;
-    &__icon {
-      width: 100%;
-      height: 100%;
-    }
+}
+
+.playerBtn {
+  margin: auto auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  &_icon {
+    width: 100%;
+    height: 100%;
   }
 }
